# udaplay

udaplay/: .gitignore  README.md  Udaplay_02_starter_project.ipynb  Udaplay_ai_agent.ipynb  Udaplay_generate_games_vector_db.ipynb  pyproject.toml  ruff.toml
udaplay/lib/: agents.py  long_memory.py  vector_db.py
