[project]
name = "udaplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "dotenv>=0.9.9",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "tavily-python>=0.7.17",
]

